25 June 2013: Matthijs
	- acx_nlnetlabs.m4 updated, --disable-flto option.

20 June 2013: Matthijs
	- Merge some things from trunk:
	  * NSD does not print statistics to logfile if period is 0.
	  * Bug #491: pick program name (0th argument) as syslog identity.
	  * Add hash to rrl bucket.
	  * Fix segfault if no logfile is used.
	  * Fix memory leak in zone parser for txt record (since the large
	    number of txt subsections fix).

17 June 2013: Matthijs
	- While reading xfr, make sure there are no multiple SOA records.

13 June 2013: Matthijs
	- Use IPV6 minimum MTU settings with TCP to reduce failures that
	  are caused by delays in learning working PMTU when communicating
	  through a tunnel.
	- Improved RRL logging: also print triggering query src addr and qtype
	  (thanks Klaus Darilion).
	- Enable EUI48 and EUI64 with --enable-eui-rrtypes.
	- Zone directory should be relative to chroot (thanks Lukas Wunner).

6 May 2013: Matthijs
	- Add rrl-slip config option (thanks Stephane Bortzmeyer).
	- Add rrl-ipv{4,6}-prefix-length config option.

3 May 2013: Wouter
	- update acx_nlnetlabs.m4 to v23, w32 fixes with no impact on NSD3.

24 April 2013: Matthijs
	- New config option "ip-transparent:", to bind to non local addresses
	  (thanks Arjen Zonneveld).

19 April 2013: Wouter
	- Own snprintf. Fix use of snprintf return value in debug print.

10 April 2013: Matthijs
	- Fix B64_NTOP/PTON replacement definitions in configure.ac.
	- Bug #496: Support for EUI498 and EUI64 RR types.

3 April 2013: Matthijs
	- Bug #494: Exit with return code 1 if socket code fails.
	- Bug #495: Wrong bufsize in dname_to_string for root domain.

26 March 2013: Wouter
	- updated lookup3 with endianness detection changes.

25 March 2013: Matthijs
	- RRtypes ASFDB, RP, RT should not compress dnames (thanks Peter
	  van Dijk).

7 February 2013: Matthijs
	- detect endianness in lookup3 on BSD, patch from Brad Smith.

6 February 2013: Matthijs