@@ -10,7 +10,7 @@ FEATURES:
 	  are caused by delays in learning working PMTU when communicating
 	  through a tunnel.
 	- Bugfix #496: Support for EUI48 and EUI64 RR types. Experimental,
-	  turned off by default. Enable with --enable--eui-rrtypes.
+	  turned off by default. Enable with --enable-draft-rrtypes.
 	- New config option "rrl-slip:" to set the average number of
 	  packets discarded before we send back a truncated response.
 	- New config option "rrl-ipv4-prefix-length:" and
